--- a/options.conf
+++ b/options.conf
@@ -2,7 +2,7 @@
 name = pulseaudio
 url = https://freedesktop.org/software/pulseaudio/releases/pulseaudio-11.1.tar.xz
 archives = 
-giturl = 
+giturl = https://github.com/pulseaudio/pulseaudio.git
 
 [autospec]
 # build 32 bit libraries
