--- a/options.conf
+++ b/options.conf
@@ -1,9 +1,12 @@
 [package]
 name = pulseaudio
-url = https://freedesktop.org/software/pulseaudio/releases/pulseaudio-13.0.tar.xz
+url = https://freedesktop.org/software/pulseaudio/releases/pulseaudio-13.99.1.tar.xz
 archives = 
 giturl = https://github.com/pulseaudio/pulseaudio.git
 domain = 
+download_from_git = 
+branch = 
+archives_from_git = 
 alias = 
 
 [autospec]
@@ -11,6 +14,10 @@ alias =
 32bit = true
 # allow package to build with test failures
 allow_test_failures = true
+# alternative cargo pattern
+altcargo1 = true
+# alternative pgo flags
+altflags_pgo = true
 # unset %build ld_as_needed variable
 asneeded = false
 # this package is trusted enough to automatically update (used by other tools)
@@ -19,6 +26,8 @@ autoupdate = false
 broken_c++ = false
 # disable parallelization during build
 broken_parallel_build = false
+# configure build with special options
+build_special = false
 # this package is a library compatibility package and only ships versioned library files
 compat = false
 # set conservative build flags
@@ -27,26 +36,34 @@ conservative_flags = false
 dev_requires_extras = false
 # pass -ffast-math to compiler
 fast-math = false
+# alternative flags
+fsalt1 = false
 # optimize build for speed over size
-funroll-loops = true
+funroll-loops = false
 # set flags to smallest -02 flags possible
 insecure_build = false
 # do not remove static libraries
-keepstatic = false
+keepstatic = true
 # do not require autostart subpackage
 no_autostart = false
+# disable automatic provides processing
+noautoprov = false
+# disable automatic requeriments processing
+noautoreq = false
 # do not generate debuginfo for this package
 nodebug = false
+# ignore missing build ids
+nomissingbuildids = false
 # disable stripping binaries
-nostrip = false
+nostrip = true
 # configure build also for openmpi
 openmpi = false
 # optimize build for size over speed
 optimize_size = false
 # set profile for pgo
-pgo = false
+pgo = true
 # set flags for security-sensitive builds
-security_sensitive = false
+security_sensitive = true
 # do not run test suite
 skip_tests = false
 # add .so files to the lib package instead of dev
@@ -58,7 +75,7 @@ use_avx512 = false
 # add clang flags
 use_clang = false
 # configure build for lto
-use_lto = false
+use_lto = true
 # require package verification for build
 verify_required = false
 
